# deepclient

./: .gitignore  .gitpod.yml  README.md  deep_client.py  query.py  schema.graphql  serialize_where.py  test_deep_client.py
.github/workflows/: autopr.yml  main.yml
cpp/: .gitignore  CMakeLists.txt  DeepClientCppWrapper.cpp  DeepClientCppWrapper.h  PyCppBridge.cpp  PyCppBridge.h  README.md  requirements.txt
cpp/tests/: test_deep_client.cpp
deepclient/: query.py
deepclient/python/deepclient/: query.py
php/: CMakeLists.txt  PyPhpBridge.cpp  PyPhpBridge.h  deep_client_interface.py  deep_client_php_wrapper.cpp  phpcpp.h
php/common/: modifiers.cpp
php/config/: build-defs.h  zend_config.h
php/php_headers/: php.h  php_compat.h  php_stdint.h
php/zend_headers/: zend_long.h  zend_portability.h
php_extension/: .gitignore  README.md
php_extension/TSRM/: TSRM.h
php_extension/config/: php_config.h
php_extension/php_headers/: php_syslog.h
php_extension/tests/: test.php
php_extension/zend/: includes.h
python/: requirements.txt  setup.py
python/deep_client/: deep_client.py  deep_client_options.py
python/deepclient/: __init__.py  deep_client.py  deep_client_options.py  query.py  select.py  setup.py
python/deepclient/gql/: mutation.py  serial.py
python/tests/: test_deep_client.py
tests/: test_deep_client.py
